--- a/index.html
+++ b/index.html
@@ -676,11 +676,11 @@
   </div>
   <div id="elleSectionContent">
   <div class="slider" id="elleSlider">
-    <div class="album-card lui-card-wrap" data-slot="elle-animal"><div class="album-image"><span class="album-heart">🤍</span><img id="elle-img-animal" loading="lazy" decoding="async" src="" onload="this.classList.add('loaded')"><div class="skeleton-overlay" id="skel-elle-animal"></div><div class="album-banner">Animal</div><div class="lui-upload-btn" id="elle-btn-animal" onclick="elleUploadClick('animal')"><div class="lui-upload-icon">📷</div><div class="lui-upload-lbl">Modifier</div></div><div class="lui-uploading" id="elle-loading-animal"><div class="lui-upload-progress"><div class="lui-upload-bar" id="elle-bar-animal"></div></div><div class="lui-upload-status">Envoi...</div></div></div><div class="album-desc lui-desc-editable" id="elle-desc-animal" onclick="elleEditDesc('animal')">Un regard doux 💫</div></div>
-    <div class="album-card lui-card-wrap" data-slot="elle-fleurs"><div class="album-image"><span class="album-heart">🤍</span><img id="elle-img-fleurs" loading="lazy" decoding="async" src="" onload="this.classList.add('loaded')"><div class="skeleton-overlay" id="skel-elle-fleurs"></div><div class="album-banner">Fleurs</div><div class="lui-upload-btn" id="elle-btn-fleurs" onclick="elleUploadClick('fleurs')"><div class="lui-upload-icon">📷</div><div class="lui-upload-lbl">Modifier</div></div><div class="lui-uploading" id="elle-loading-fleurs"><div class="lui-upload-progress"><div class="lui-upload-bar" id="elle-bar-fleurs"></div></div><div class="lui-upload-status">Envoi...</div></div></div><div class="album-desc lui-desc-editable" id="elle-desc-fleurs" onclick="elleEditDesc('fleurs')">Pleine de couleurs 💕</div></div>
-    <div class="album-card lui-card-wrap" data-slot="elle-personnage"><div class="album-image"><span class="album-heart">🤍</span><img id="elle-img-personnage" loading="lazy" decoding="async" src="" onload="this.classList.add('loaded')"><div class="skeleton-overlay" id="skel-elle-personnage"></div><div class="album-banner">Personnage</div><div class="lui-upload-btn" id="elle-btn-personnage" onclick="elleUploadClick('personnage')"><div class="lui-upload-icon">📷</div><div class="lui-upload-lbl">Modifier</div></div><div class="lui-uploading" id="elle-loading-personnage"><div class="lui-upload-progress"><div class="lui-upload-bar" id="elle-bar-personnage"></div></div><div class="lui-upload-status">Envoi...</div></div></div><div class="album-desc lui-desc-editable" id="elle-desc-personnage" onclick="elleEditDesc('personnage')">Attachante 💍</div></div>
-    <div class="album-card lui-card-wrap" data-slot="elle-saison"><div class="album-image"><span class="album-heart">🤍</span><img id="elle-img-saison" loading="lazy" decoding="async" src="" onload="this.classList.add('loaded')"><div class="skeleton-overlay" id="skel-elle-saison"></div><div class="album-banner">Saison</div><div class="lui-upload-btn" id="elle-btn-saison" onclick="elleUploadClick('saison')"><div class="lui-upload-icon">📷</div><div class="lui-upload-lbl">Modifier</div></div><div class="lui-uploading" id="elle-loading-saison"><div class="lui-upload-progress"><div class="lui-upload-bar" id="elle-bar-saison"></div></div><div class="lui-upload-status">Envoi...</div></div></div><div class="album-desc lui-desc-editable" id="elle-desc-saison" onclick="elleEditDesc('saison')">Un rayon de soleil ☀️</div></div>
-    <div class="album-card lui-card-wrap" data-slot="elle-repas"><div class="album-image"><span class="album-heart">🤍</span><img id="elle-img-repas" loading="lazy" decoding="async" src="" onload="this.classList.add('loaded')"><div class="skeleton-overlay" id="skel-elle-repas"></div><div class="album-banner">Repas</div><div class="lui-upload-btn" id="elle-btn-repas" onclick="elleUploadClick('repas')"><div class="lui-upload-icon">📷</div><div class="lui-upload-lbl">Modifier</div></div><div class="lui-uploading" id="elle-loading-repas"><div class="lui-upload-progress"><div class="lui-upload-bar" id="elle-bar-repas"></div></div><div class="lui-upload-status">Envoi...</div></div></div><div class="album-desc lui-desc-editable" id="elle-desc-repas" onclick="elleEditDesc('repas')">N'aime que les pattes 🤝</div></div>
+    <div class="album-card lui-card-wrap" data-slot="elle-animal"><div class="album-image"><span class="album-heart">🤍</span><div class="lui-img-empty" id="elle-empty-animal"><div class="lui-img-empty-icon">🐾</div><div class="lui-img-empty-lbl">Animal</div></div><img id="elle-img-animal" loading="lazy" decoding="async" src="" style="display:none" onload="this.classList.add('loaded')"><div class="album-banner">Animal</div><div class="lui-upload-btn" id="elle-btn-animal" onclick="elleUploadClick('animal')"><div class="lui-upload-icon">📷</div><div class="lui-upload-lbl">Modifier</div></div><div class="lui-uploading" id="elle-loading-animal"><div class="lui-upload-progress"><div class="lui-upload-bar" id="elle-bar-animal"></div></div><div class="lui-upload-status">Envoi...</div></div></div><div class="album-desc lui-desc-editable" id="elle-desc-animal" onclick="elleEditDesc('animal')">Un regard doux 💫</div></div>
+    <div class="album-card lui-card-wrap" data-slot="elle-fleurs"><div class="album-image"><span class="album-heart">🤍</span><div class="lui-img-empty" id="elle-empty-fleurs"><div class="lui-img-empty-icon">🌸</div><div class="lui-img-empty-lbl">Fleurs</div></div><img id="elle-img-fleurs" loading="lazy" decoding="async" src="" style="display:none" onload="this.classList.add('loaded')"><div class="album-banner">Fleurs</div><div class="lui-upload-btn" id="elle-btn-fleurs" onclick="elleUploadClick('fleurs')"><div class="lui-upload-icon">📷</div><div class="lui-upload-lbl">Modifier</div></div><div class="lui-uploading" id="elle-loading-fleurs"><div class="lui-upload-progress"><div class="lui-upload-bar" id="elle-bar-fleurs"></div></div><div class="lui-upload-status">Envoi...</div></div></div><div class="album-desc lui-desc-editable" id="elle-desc-fleurs" onclick="elleEditDesc('fleurs')">Pleine de couleurs 💕</div></div>
+    <div class="album-card lui-card-wrap" data-slot="elle-personnage"><div class="album-image"><span class="album-heart">🤍</span><div class="lui-img-empty" id="elle-empty-personnage"><div class="lui-img-empty-icon">🧑</div><div class="lui-img-empty-lbl">Personnage</div></div><img id="elle-img-personnage" loading="lazy" decoding="async" src="" style="display:none" onload="this.classList.add('loaded')"><div class="album-banner">Personnage</div><div class="lui-upload-btn" id="elle-btn-personnage" onclick="elleUploadClick('personnage')"><div class="lui-upload-icon">📷</div><div class="lui-upload-lbl">Modifier</div></div><div class="lui-uploading" id="elle-loading-personnage"><div class="lui-upload-progress"><div class="lui-upload-bar" id="elle-bar-personnage"></div></div><div class="lui-upload-status">Envoi...</div></div></div><div class="album-desc lui-desc-editable" id="elle-desc-personnage" onclick="elleEditDesc('personnage')">Attachante 💍</div></div>
+    <div class="album-card lui-card-wrap" data-slot="elle-saison"><div class="album-image"><span class="album-heart">🤍</span><div class="lui-img-empty" id="elle-empty-saison"><div class="lui-img-empty-icon">🍂</div><div class="lui-img-empty-lbl">Saison</div></div><img id="elle-img-saison" loading="lazy" decoding="async" src="" style="display:none" onload="this.classList.add('loaded')"><div class="album-banner">Saison</div><div class="lui-upload-btn" id="elle-btn-saison" onclick="elleUploadClick('saison')"><div class="lui-upload-icon">📷</div><div class="lui-upload-lbl">Modifier</div></div><div class="lui-uploading" id="elle-loading-saison"><div class="lui-upload-progress"><div class="lui-upload-bar" id="elle-bar-saison"></div></div><div class="lui-upload-status">Envoi...</div></div></div><div class="album-desc lui-desc-editable" id="elle-desc-saison" onclick="elleEditDesc('saison')">Un rayon de soleil ☀️</div></div>
+    <div class="album-card lui-card-wrap" data-slot="elle-repas"><div class="album-image"><span class="album-heart">🤍</span><div class="lui-img-empty" id="elle-empty-repas"><div class="lui-img-empty-icon">🍽️</div><div class="lui-img-empty-lbl">Repas</div></div><img id="elle-img-repas" loading="lazy" decoding="async" src="" style="display:none" onload="this.classList.add('loaded')"><div class="album-banner">Repas</div><div class="lui-upload-btn" id="elle-btn-repas" onclick="elleUploadClick('repas')"><div class="lui-upload-icon">📷</div><div class="lui-upload-lbl">Modifier</div></div><div class="lui-uploading" id="elle-loading-repas"><div class="lui-upload-progress"><div class="lui-upload-bar" id="elle-bar-repas"></div></div><div class="lui-upload-status">Envoi...</div></div></div><div class="album-desc lui-desc-editable" id="elle-desc-repas" onclick="elleEditDesc('repas')">N'aime que les pattes 🤝</div></div>
   </div>
   <input type="file" id="elleFileInput" accept="image/jpeg,image/png,image/webp" style="display:none" onchange="elleHandleFile(this)">
   </div>
@@ -714,16 +714,16 @@
       <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="3"/><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-4 0v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83-2.83l.06-.06A1.65 1.65 0 0 0 4.68 15a1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1 0-4h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 2.83-2.83l.06.06A1.65 1.65 0 0 0 9 4.68a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 4 0v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 2.83l-.06.06A1.65 1.65 0 0 0 19.4 9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z"/></svg>
     </button>
   </div>
-  <!-- Note + Todo côte à côte -->
-  <div class="memo-duo-wrap" onclick="openMemoPopup()">
-    <!-- Note -->
-    <div class="memo-duo-card">
+  <!-- Note + Todo côte à côte — clics séparés -->
+  <div class="memo-duo-wrap">
+    <!-- Note → ouvre vue lecture note -->
+    <div class="memo-duo-card" onclick="openMemoNoteView()" style="cursor:pointer;">
       <div class="memo-duo-title">Note</div>
       <div class="memo-duo-content" id="memoNotePreview"><span style="color:var(--muted);font-size:12px;">Aucune note</span></div>
       <div class="memo-duo-date" id="memoNoteDate"></div>
     </div>
-    <!-- Todo -->
-    <div class="memo-duo-card">
+    <!-- Todo → ouvre vue lecture todo -->
+    <div class="memo-duo-card" onclick="openMemoTodoView()" style="cursor:pointer;">
       <div class="memo-duo-title">To-do</div>
       <div class="memo-duo-content" id="memoTodoPreview"><span style="color:var(--muted);font-size:12px;">Liste vide</span></div>
     </div>
@@ -820,7 +820,38 @@
 
 <!-- MODALES -->
 
-<!-- Mémo popup modal — note unique + todo -->
+<!-- ── Vue Note (lecture) ── -->
+<div id="memoNoteViewModal" class="nous-modal-overlay">
+  <div class="nous-modal-sheet" style="max-height:82vh;overflow-y:auto;display:flex;flex-direction:column;">
+    <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:12px;flex-shrink:0;">
+      <div id="memoNoteViewTitle" style="font-size:17px;font-weight:700;color:var(--text);">Note</div>
+      <span onclick="closeMemoNoteView()" style="font-size:20px;color:var(--muted);cursor:pointer;padding:4px 8px;">✕</span>
+    </div>
+    <div id="memoNoteViewDate" style="font-size:11px;color:var(--muted);margin-bottom:14px;flex-shrink:0;"></div>
+    <div id="memoNoteViewText" style="flex:1;font-size:15px;color:var(--text);line-height:1.7;white-space:pre-wrap;overflow-y:auto;"></div>
+    <div style="display:flex;gap:10px;margin-top:20px;flex-shrink:0;">
+      <button onclick="closeMemoNoteView()" style="flex:1;padding:12px;background:var(--s2);border:1px solid var(--border);border-radius:12px;color:var(--text);font-size:14px;font-family:'DM Sans',sans-serif;font-weight:600;cursor:pointer;">Fermer</button>
+      <button onclick="closeMemoNoteView();openMemoPopup();" style="flex:1;padding:12px;background:linear-gradient(135deg,#e879a0,#9b59b6);border:none;border-radius:12px;color:#fff;font-size:14px;font-family:'DM Sans',sans-serif;font-weight:700;cursor:pointer;">Modifier ✏️</button>
+    </div>
+  </div>
+</div>
+
+<!-- ── Vue Todo (interactif + réordonnement) ── -->
+<div id="memoTodoViewModal" class="nous-modal-overlay">
+  <div class="nous-modal-sheet" style="max-height:86vh;overflow-y:auto;display:flex;flex-direction:column;">
+    <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:16px;flex-shrink:0;">
+      <div style="font-size:17px;font-weight:700;color:var(--text);">To-do list</div>
+      <span onclick="closeMemoTodoView()" style="font-size:20px;color:var(--muted);cursor:pointer;padding:4px 8px;">✕</span>
+    </div>
+    <div id="memoTodoViewList" style="flex:1;display:flex;flex-direction:column;gap:6px;overflow-y:auto;"></div>
+    <div style="display:flex;gap:10px;margin-top:20px;flex-shrink:0;">
+      <button onclick="closeMemoTodoView()" style="flex:1;padding:12px;background:var(--s2);border:1px solid var(--border);border-radius:12px;color:var(--text);font-size:14px;font-family:'DM Sans',sans-serif;font-weight:600;cursor:pointer;">Fermer</button>
+      <button onclick="closeMemoTodoView();openMemoPopup();" style="flex:1;padding:12px;background:linear-gradient(135deg,#e879a0,#9b59b6);border:none;border-radius:12px;color:#fff;font-size:14px;font-family:'DM Sans',sans-serif;font-weight:700;cursor:pointer;">Modifier ✏️</button>
+    </div>
+  </div>
+</div>
+
+<!-- Mémo popup modal — note unique + todo (ÉDITION via engrenage) -->
 <div id="memoPopupModal" class="nous-modal-overlay">
   <div class="nous-modal-sheet" style="max-height:88vh;overflow-y:auto;display:flex;flex-direction:column;">
     <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:16px;flex-shrink:0;">
