--- a/index.html
+++ b/index.html
@@ -738,11 +738,13 @@
 </div>
 
 <!-- POST-ITS / PETITS MOTS -->
+<!-- POST-ITS / PETITS MOTS -->
 <div class="section fade-in" id="postitsSection">
   <div class="section-label" style="display:flex;align-items:center;justify-content:space-between;">
     <span>Petits mots pour toi</span>
-    <button onclick="openPetitsMotsGestion()" style="background:none;border:none;cursor:pointer;padding:4px 6px;color:var(--muted);display:flex;align-items:center;opacity:0.7;" aria-label="Gérer les petits mots">
-      <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>
+    <button onclick="openPetitsMotsGestion()" style="background:none;border:none;cursor:pointer;padding:4px 6px;color:var(--muted);display:flex;align-items:center;gap:5px;opacity:0.75;font-size:11px;font-weight:700;font-family:'DM Sans',sans-serif;letter-spacing:0.3px;" aria-label="Écrire un mot">
+      <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>
+      Écrire
     </button>
   </div>
   <div class="postit-wrap" id="postitStack"></div>
@@ -752,10 +754,11 @@
 
 <!-- SOUVENIRS -->
 <div class="section fade-in" id="souvenirsSection">
-  <div style="display:flex;align-items:center;justify-content:space-between;padding:26px 16px 12px;">
-    <div class="section-label" style="padding:0;margin:0;">Nos souvenirs</div>
-    <button onclick="nousOpenSouvenirGestion()" style="background:none;border:none;cursor:pointer;padding:6px;color:var(--muted);display:flex;align-items:center;" aria-label="Gérer les souvenirs">
-      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="8.5" cy="8.5" r="1.5"/><polyline points="21 15 16 10 5 21"/></svg>
+  <div class="section-label" style="display:flex;align-items:center;justify-content:space-between;margin-bottom:14px;">
+    <span>Nos souvenirs</span>
+    <button onclick="nousOpenSouvenirGestion()" style="background:none;border:none;cursor:pointer;padding:4px 6px;color:var(--muted);display:flex;align-items:center;gap:5px;opacity:0.75;font-size:11px;font-weight:700;font-family:'DM Sans',sans-serif;letter-spacing:0.3px;" aria-label="Voir tous les souvenirs">
+      <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"/></svg>
+      Tout voir
     </button>
   </div>
 
