--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
 
   <!-- Rangée : Favoris -->
   <div id="souvenirsFavRow" style="display:none;margin-top:16px;">
-    <div style="padding:0 16px 8px;font-size:11px;font-weight:700;color:var(--muted);text-transform:uppercase;letter-spacing:1.2px;">Nos favoris ❤️</div>
+    <div style="padding:0 16px 8px;font-size:11px;font-weight:700;color:var(--muted);text-transform:uppercase;letter-spacing:1.2px;">Nos favoris <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/></svg></div>
     <div id="souvenirsFavScroll" style="display:flex;gap:10px;overflow-x:auto;padding:0 16px 4px;-webkit-overflow-scrolling:touch;scrollbar-width:none;"></div>
   </div>
 
@@ -779,7 +779,7 @@
 
   <!-- Bouton ajouter style Paired -->
   <div style="padding:12px 16px 16px;">
-    <button onclick="nousOpenSouvenirModal(null)" style="width:100%;padding:14px;background:var(--s2);border:1.5px dashed var(--border);border-radius:14px;color:var(--muted);font-size:14px;font-family:'DM Sans',sans-serif;font-weight:600;cursor:pointer;display:flex;align-items:center;justify-content:center;gap:8px;transition:background 0.15s;" onmouseover="this.style.background='var(--s1)'" onmouseout="this.style.background='var(--s2)'">
+    <button onclick="nousOpenSouvenirModal(null)" style="width:100%;padding:14px;background:var(--s2);border:1.5px dashed var(--border);border-radius:14px;color:var(--muted);font-size:13px;font-family:'DM Sans',sans-serif;font-weight:600;cursor:pointer;display:flex;align-items:center;justify-content:center;gap:8px;transition:background 0.15s;" onmouseover="this.style.background='var(--s1)'" onmouseout="this.style.background='var(--s2)'">
       <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>
       Ajouter un souvenir
     </button>
@@ -788,11 +788,10 @@
 
 <!-- ACTIVITÉS -->
 <div class="section fade-in" id="activitesSection">
-  <div style="padding:26px 16px 12px;">
-    <div class="section-label" style="padding:0;margin:0 0 4px;">Cahier d'activités</div>
-    <div style="font-size:12px;color:var(--muted);">Des choses à faire ensemble, étape par étape</div>
-  </div>
-  <div id="activitesContainer" style="padding:0 16px 24px;display:flex;flex-direction:column;gap:12px;"></div>
+  <div class="section-label">Cahier d'activités</div>
+  <div style="font-size:12px;color:var(--muted);padding:0 0 14px;">Des choses à faire ensemble, étape par étape</div>
+  <div id="activitesContainer" style="display:flex;flex-direction:column;gap:12px;"></div>
+  <div id="activitesBtnWrap" style="padding-top:12px;padding-bottom:8px;"></div>
 </div>
 
 <!-- LIVRES -->
@@ -899,7 +898,7 @@
 <div id="petitsMotsGestionModal" class="nous-modal-overlay">
   <div class="nous-modal-sheet" style="max-height:80vh;overflow-y:auto;">
     <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:16px;">
-      <div style="font-size:17px;font-weight:700;color:var(--text);">Mes mots pour toi</div>
+      <div style="font-size:17px;font-weight:700;color:var(--text);">Lui écrire un mot</div>
       <span onclick="closePetitsMotsGestion()" style="font-size:20px;color:var(--muted);cursor:pointer;padding:4px 8px;">✕</span>
     </div>
     <div id="petitsMotsGestionList" style="display:flex;flex-direction:column;gap:8px;"></div>
@@ -2921,10 +2920,12 @@ document.addEventListener('DOMContentLoaded', function(){
   letter-spacing: 1.5px; margin-bottom: 10px;
 }
 .activite-new-btn {
-  width: 100%; padding: 13px; background: var(--s2); border: 1px dashed var(--border);
-  border-radius: 12px; color: var(--muted); font-size: 13px; font-family: 'DM Sans', sans-serif;
-  cursor: pointer; transition: background 0.15s;
+  width: 100%; padding: 14px; background: var(--s2); border: 1.5px dashed var(--border);
+  border-radius: 14px; color: var(--muted); font-size: 13px; font-weight: 600;
+  font-family: 'DM Sans', sans-serif; cursor: pointer; transition: background 0.15s;
+  display: flex; align-items: center; justify-content: center; gap: 8px;
 }
+.activite-new-btn:hover { background: var(--s1); }
 .activite-new-btn:active { background: var(--s1); }
 .activite-add-btn {
   width: 100%; padding: 12px; background: linear-gradient(135deg,#e879a0,#9b59b6);
